# embed-files-web-app-cpp

./: CMakeLists.txt
src/: main.cpp
web-app/: package-lock.json  package.json  vite.config.js
